fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,11 @@
 @layer base {
   html {
     @apply w-full h-full p-0 m-0;
+    overflow-x: hidden;
+  }
+
+  body {
+    overflow-x: hidden;
   }
 
   h1,
@@ -41,13 +46,21 @@
   }
 
   .gradiente {
-    background: linear-gradient(180deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.6) 0%,
+      rgba(0, 0, 0, 0) 100%
+    );
   }
   .gradiente-h {
-    background: linear-gradient(90deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.2) 70%);
+    background: linear-gradient(
+      90deg,
+      rgba(0, 0, 0, 0.7) 0%,
+      rgba(0, 0, 0, 0.2) 70%
+    );
   }
 
-  .whats{
+  .whats {
     z-index: 9999999;
     background-color: rgb(4, 190, 4);
     padding: 6px 6px 6px 6px !important;
@@ -63,21 +76,20 @@
     text-align: center;
     cursor: pointer;
   }
-  .waicon{
+  .waicon {
     color: #f5f5f5;
-    height: 35px!important;
+    height: 35px !important;
   }
-  
 }
 
 span.swiper-pagination-bullet {
   height: 16px;
   width: 16px;
-  background-color: #14145E !important;
+  background-color: #14145e !important;
   opacity: 1;
 }
 .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background-color: #19D6CB !important;
+  background-color: #19d6cb !important;
 }
 
 :host >>> .swiper-pagination {
